dark mode fixed, arranged

--- a/style1.css
+++ b/style1.css
@@ -10,7 +10,7 @@ body {
 	justify-items: center;
 	/* align-items: center; */
 	position: relative;
-	background-image: url("bbg1.png");
+	background-image: url("images/bbg1.png");
 	min-height: 80vh;
 	/* height: fit-content; */
 	background-repeat: no-repeat;
@@ -177,7 +177,27 @@ body::-webkit-scrollbar {
 	
   }
   /* ends here */
+/* Loading css */
+#loading {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgb(255, 255, 255);
+	/* opacity: 97%; */
+	z-index: 9999;
+}
 
+#loading h1 {
+	font-size:x-large;
+	font-weight: bold;
+	color: #000000;
+}
+/* ends here */
 /*  DSA serial wise topic names css */
 
 .serial{
